[tool.poetry]
name = "tanjimestan"
version = "0.1.0"
description = ""
authors = ["Ehsan Barkhordar <barkhordar.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "==5.2.2"
persiantools = "==3.0.1"
python-dotenv = "==1.0.0"
python-telegram-bot = "==13.1"
pytz = "==2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
